Added my .gitignore

--- a/sample.html
+++ b/sample.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Index File</title>
+    <title>Not Tracked Files</title>
 </head>
 <body>
-<p>Sample body</p>
-<p>New Stuff</p>
+
 </body>
 </html>
