--- a/codeschool_magiccake.html
+++ b/codeschool_magiccake.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style type="text/css">
+        a {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 <h1>Recipe World</h1>
