--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -3,8 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .button {
+            font: bold 11px Arial;
+            text-decoration: none;
+            background-color: #EEEEEE;
+            color: #333333;
+            padding: 2px 6px 2px 6px;
+            border-top: 1px solid #CCCCCC;
+            border-right: 1px solid #333333;
+            border-bottom: 1px solid #333333;
+            border-left: 1px solid #CCCCCC;
+        }
+
+        .mylink {
+            display: block;
+            background-color: #0c6dc4;
+            color: #ffffff;
+            padding: 10px;
+            text-align: center;
+            border-radius: 3px;
+            margin-top: 3px;
+            text-decoration: none;
+        }
+
+        .formcontainer{
+            width: 250px;
+            margin: 0 auto;
+            border: 1px solid;
+            padding: 20px;
+        }
+
+        .row{
+            display: flex;
+            justify-content: space-between;
+        }
+        .nav{
+            list-style-type: none;
+            display: inline;
+        }
+        li {
+            float:left;
+        }
+    </style>
 </head>
 <body>
+<div class="nav">
+    <ul>
+        <li>
+            <a href="home.html">Home</a>
+        </li>
+        <li>
+            <a href="projects.html">Current Projects</a>
+        </li>
+        <li>
+            <a href="resume.html">Resume</a>
+        </li>
+        <li>
+            <a href="contact.html">Contact Me</a>
+        </li>
+    </ul>
+</div>
 
 </body>
 </html>
