--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -4,63 +4,87 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        .button {
-            font: bold 11px Arial;
+
+        body {
+            background-color: #BEBBBB;
+            margin: 0px;
+            padding: 0px;
+        }
+        ul {
+            float: left;
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            list-style-type: none;
+        }
+        .nav {
+            margin: 0;
+            padding: 0;
+            width: 100%
+        }
+        .nav a {
+            text-align: center;
+            float: left;
+            width: 25%;
             text-decoration: none;
-            background-color: #EEEEEE;
-            color: #333333;
-            padding: 2px 6px 2px 6px;
-            border-top: 1px solid #CCCCCC;
-            border-right: 1px solid #333333;
-            border-bottom: 1px solid #333333;
-            border-left: 1px solid #CCCCCC;
+            color: #4C5B5C;
+            background-color: #B9EA09;
+            padding: 0.4em 0;
+            margin: 0 0 5px 0;
+        }
+
+        a:hover {
+            background-color: #A9D608;
+        }
+
+        li {
+            display: inline;
         }
 
         .mylink {
             display: block;
-            background-color: #0c6dc4;
-            color: #ffffff;
-            padding: 10px;
+            background-color: #3D92CC;
+            color: #2F243A;
+            padding: 5px;
             text-align: center;
             border-radius: 3px;
             margin-top: 3px;
             text-decoration: none;
         }
-
+        .mylink:hover {
+            background-color: #47ACEF;
+        }
         .formcontainer{
+            color: #2F243A;
             width: 250px;
             margin: 0 auto;
             border: 1px solid;
             padding: 20px;
         }
-
         .row{
             display: flex;
             justify-content: space-between;
         }
         .nav{
             list-style-type: none;
-            display: inline;
-        }
-        li {
-            float:left;
         }
     </style>
 </head>
 <body>
+
 <div class="nav">
     <ul>
         <li>
-            <a href="home.html">Home</a>
+            <a href="home.html">About</a>
         </li>
         <li>
-            <a href="projects.html">Current Projects</a>
+            <a href="projects.html">Projects</a>
         </li>
         <li>
             <a href="resume.html">Resume</a>
         </li>
         <li>
-            <a href="contact.html">Contact Me</a>
+            <a href="contact.html">Contact</a>
         </li>
     </ul>
 </div>
