--- a/portfolio/home.html
+++ b/portfolio/home.html
@@ -3,79 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-        p {
-            margin: 0 5px;
-            padding: 0;
-        }
-        body {
-            background-color: #BEBBBB;
-            margin: 0px;
-            padding: 0px;
-        }
-        ul {
-            float: left;
-            width: 100%;
-            padding: 0;
-            margin: 0;
-            list-style-type: none;
-        }
-
-        .nav {
-            margin: 0;
-            padding: 0;
-            width: 100%
-        }
-        .nav a {
-            text-align: center;
-            float: left;
-            width: 25%;
-            text-decoration: none;
-            color: #4C5B5C;
-            background-color: #B9EA09;
-            padding: 0.4em 0;
-            margin: 0 0 5px 0;
-        }
-
-        a:hover {
-            background-color: #A9D608;
-        }
-
-        li {
-            display: inline;
-        }
-        .mylink {
-            display: block;
-            background-color: #3D92CC;
-            color: #2F243A;
-            padding: 5px;
-            text-align: center;
-            border-radius: 3px;
-            margin-top: 3px;
-            text-decoration: none;
-        }
-        .mylink:hover {
-            background-color: #47ACEF;
-        }
-        .formcontainer{
-            color: #2F243A;
-            width: 250px;
-            margin: 0 auto;
-            border: 1px solid;
-            padding: 20px;
-        }
-        .row{
-            display: flex;
-            justify-content: space-between;
-        }
-        .nav{
-            list-style-type: none;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="main.css">
 </head>
-<body>
+<body class="test-bio">
 
 <div class="nav">
+    <h2>Ronald Marx</h2>
     <ul>
         <li>
             <a href="home.html">About</a>
@@ -92,8 +25,11 @@
     </ul>
 </div>
 
-<div>
-    <p>I need to put this in the center of the page, and a bit lower. Larger font too.</p>
+<div class="bio">
+    <p>
+        I need to put this in the center of the page, and a bit lower. Larger font too. I now need to make it go to the
+        bottoms
+    </p>
 </div>
 </body>
 </html>
