Classwork from 1/27 and made better portfolio that doenst suck

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                 <span>Email: </span>
                 <input type="text" placeholder="Text"/>
             </div>
-            <a href="htmlday1.html" class="mylink">Send</a>
+            <a href="htmlclasses/htmlday1.html" class="mylink">Send</a>
         </form>
     </div>
 </body>
