Testing school server for git push. Made changed to about me page, making two boxes.

--- a/htmlclasses/contact.html
+++ b/htmlclasses/contact.html
@@ -3,8 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="main.css">
+
 </head>
 <body>
+<div class="container">
+    <div class="mytitle">
+        <div>
+            <span>Ronald Marx</span>
+        </div>
+        <div>
+            <span>About Me</span>
+        </div>
+    </div>
 
+    <div class="navsection">
+        <a href="index.html">Home</a>
+        <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
+        <a href="projects.html">Projects</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact Me</a>
+
+    </div>
+    <div class="formcontainer">
+        <h3>Contact Me</h3>
+        <form>
+            <div class="row">
+                <span>Name: </span>
+                <input type="text" placeholder="Text"/>
+            </div>
+            <div class="row">
+                <span>Phone: </span>
+                <input type="text" placeholder="Text"/>
+            </div>
+            <div class="row">
+                <span>Email: </span>
+                <input type="text" placeholder="Text"/>
+            </div>
+            <a href="htmlclasses/htmlday1.html" class="mylink">Send</a>
+        </form>
+    </div>
+
+</div>
 </body>
 </html>
