--- a/htmlclasses/aboutme.html
+++ b/htmlclasses/aboutme.html
@@ -29,8 +29,13 @@
 
     </div>
     <div class="mydescription">
-        <span>I'm a full stack web development student attending the MATC. I graduated in 2014 from Weber State University
-        with a degree in Materials Physics, and later worked for Alpine School District as a Math Teacher for two years.</span>
+        <div class="descriptioncontent">
+            <span>I'm a full stack web development student attending the MATC. I graduated in 2014 from Weber State University
+            with a degree in Materials Physics, and later worked for Alpine School District as a Math Teacher for two years.</span>
+        </div>
+        <div class="descriptioncontent">
+            <span>Random text to figure this out</span>
+        </div>
     </div>
 </div>
 </body>
