--- a/htmlclasses/resume.html
+++ b/htmlclasses/resume.html
@@ -3,8 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="main.css">
+
 </head>
 <body>
+<div class="container">
+    <div class="mytitle">
+        <div>
+            <span>Ronald Marx</span>
+        </div>
+        <div>
+            <span>About Me</span>
+        </div>
+    </div>
 
+    <div class="navsection">
+        <a href="index.html">Home</a>
+        <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
+        <a href="projects.html">Projects</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact Me</a>
+
+    </div>
+</div>
 </body>
 </html>
