Testing school server for git push. Made changed to about me page, making two boxes.

--- a/htmlclasses/contact.html
+++ b/htmlclasses/contact.html
@@ -2,21 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Contact Me</title>
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="main.css">
 
 </head>
 <body>
 <div class="container">
-    <div class="mytitle">
-        <div>
-            <span>Ronald Marx</span>
-        </div>
-        <div>
-            <span>About Me</span>
-        </div>
-    </div>
 
     <div class="navsection">
         <a href="index.html">Home</a>
@@ -26,6 +18,15 @@
         <a href="contact.html">Contact Me</a>
 
     </div>
+    <div class="mytitle">
+        <div>
+            <span> </span>
+        </div>
+        <div>
+            <span> </span>
+        </div>
+    </div>
+
     <div class="formcontainer">
         <h3>Contact Me</h3>
         <form>
