--- a/htmlclasses/aboutme.html
+++ b/htmlclasses/aboutme.html
@@ -11,14 +11,6 @@
 
 <!-- <img style="width: 600px;" src="images/bear.png" /> -->
 <div class="container">
-    <div class="mytitle">
-        <div>
-            <span>Ronald Marx</span>
-        </div>
-        <div>
-            <span>About Me</span>
-        </div>
-    </div>
 
     <div class="navsection">
         <a href="index.html">Home</a>
@@ -28,6 +20,15 @@
         <a href="contact.html">Contact Me</a>
 
     </div>
+    <div class="mytitle">
+        <div>
+            <span>About Me</span>
+        </div>
+        <div>
+            <span></span>
+        </div>
+    </div>
+
     <div class="mydescription">
         <div class="descriptioncontent">
             <span>I'm a full stack web development student attending the MATC. I graduated in 2014 from Weber State University
