--- a/htmlclasses/index.html
+++ b/htmlclasses/index.html
@@ -10,14 +10,6 @@
 
     <!-- <img style="width: 600px;" src="images/bear.png" /> -->
     <div class="container">
-        <div class="mytitle">
-            <div>
-                <span>Ronald Marx</span>
-            </div>
-            <div>
-                <span>About Me</span>
-            </div>
-        </div>
 
         <div class="navsection">
             <a href="index.html">Home</a>
@@ -27,6 +19,15 @@
             <a href="contact.html">Contact Me</a>
 
         </div>
+        <div class="mytitle">
+            <div>
+                <span>Ronald Marx</span>
+            </div>
+            <div>
+                <span> </span>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
