--- a/htmlclasses/resume.html
+++ b/htmlclasses/resume.html
@@ -2,21 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="main.css">
 
 </head>
 <body>
 <div class="container">
-    <div class="mytitle">
-        <div>
-            <span>Ronald Marx</span>
-        </div>
-        <div>
-            <span>About Me</span>
-        </div>
-    </div>
 
     <div class="navsection">
         <a href="index.html">Home</a>
@@ -26,6 +18,15 @@
         <a href="contact.html">Contact Me</a>
 
     </div>
+    <div class="mytitle">
+        <div>
+            <span>Resume</span>
+        </div>
+        <div>
+            <span> </span>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
