Lucky push, box shadows and everything.

--- a/htmlclasses/aboutme.html
+++ b/htmlclasses/aboutme.html
@@ -30,9 +30,11 @@
     </div>
 
     <div class="mydescription">
-        <div class="descriptioncontent">
+        <div class="descriptioncontentme">
             <span>I'm a full stack web development student attending the MATC. I graduated in 2014 from Weber State University
-            with a degree in Materials Physics, and later worked for Alpine School District as a Math Teacher for two years.</span>
+            with a degree in Materials Physics. My experiences led me to work
+            with Alpine School District as a Math Teacher, however I'm currently looking to expand my knowledge
+            in the field of web development.</span>
         </div>
         <div class="descriptioncontent">
             <span>Random text to figure this out</span>
