Updated contact me page. Classwork for 1/31

--- a/htmlclasses/contact.html
+++ b/htmlclasses/contact.html
@@ -42,7 +42,10 @@
                 <span>Email: </span>
                 <input type="text" placeholder="Text"/>
             </div>
-            <a href="htmlclasses/htmlday1.html" class="mylink">Send</a>
+            <!-- <a href="htmlclasses/htmlday1.html" class="mylink">Send</a> <!-- Why anchor tag? -->
+            <div>
+                <input type="submit" class="mylink"  value="Send">
+            </div>
         </form>
     </div>
 
