--- a/htmlclasses/aboutme.html
+++ b/htmlclasses/aboutme.html
@@ -13,11 +13,11 @@
 <div class="container">
 
     <div class="navsection">
-        <a href="index.html">Home</a>
+        <a href="index.html" class="homelink navlink">Home</a>
         <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
-        <a href="projects.html">Projects</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact Me</a>
+        <a href="projects.html" class="projectlink navlink">Projects</a>
+        <a href="resume.html" class="resumelink navlink">Resume</a>
+        <a href="contact.html" class="contactlink navlink">Contact Me</a>
 
     </div>
     <div class="mytitle">
