--- a/htmlclasses/index.html
+++ b/htmlclasses/index.html
@@ -6,17 +6,17 @@
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="main.css">
 </head>
-<body>
+<body id="homepage">
 
     <!-- <img style="width: 600px;" src="images/bear.png" /> -->
     <div class="container">
 
         <div class="navsection">
-            <a href="index.html">Home</a>
+            <a href="index.html" class="homelink navlink">Home</a>
             <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
-            <a href="projects.html">Projects</a>
-            <a href="resume.html">Resume</a>
-            <a href="contact.html">Contact Me</a>
+            <a href="projects.html" class="projectlink navlink">Projects</a>
+            <a href="resume.html" class="resumelink navlink">Resume</a>
+            <a href="contact.html" class="contactlink navlink">Contact Me</a>
 
         </div>
         <div class="mytitle">
