--- a/htmlclasses/projects.html
+++ b/htmlclasses/projects.html
@@ -7,15 +7,15 @@
     <link type="text/css" rel="stylesheet" href="main.css">
 
 </head>
-<body>
+<body id="projectspage">
 <div class="container">
 
     <div class="navsection">
-        <a href="index.html">Home</a>
+        <a href="index.html" class="homelink navlink">Home</a>
         <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
-        <a href="projects.html">Projects</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact Me</a>
+        <a href="projects.html" class="projectlink navlink">Projects</a>
+        <a href="resume.html" class="resumelink navlink">Resume</a>
+        <a href="contact.html" class="contactlink navlink">Contact Me</a>
 
     </div>
     <div class="mytitle">
@@ -26,7 +26,14 @@
             <span> </span>
         </div>
     </div>
+    <div class="myprojectscontainer">
+        <div class="myprojectdescription">
 
+        </div>
+        <div class="myprojectlist">
+
+        </div>
+    </div>
 </div>
 </body>
 </html>
