Got tiles on projects page working

--- a/htmlclasses/projects.html
+++ b/htmlclasses/projects.html
@@ -28,10 +28,22 @@
     </div>
     <div class="myprojectscontainer">
         <div class="myprojectdescription">
-
+            <span>Throughout the course of my Web Development, I have worked on several projects related to website
+            design. More filler content here.</span>
         </div>
         <div class="myprojectlist">
-
+            <div class="projectbox">
+            <span>Alignment</span>
+            </div>
+            <div class="projectbox">
+                <span>Alignment</span>
+            </div>
+            <div class="projectbox">
+                <span>Alignment</span>
+            </div>
+            <div class="projectbox">
+                <span>alignment</span>
+            </div>
         </div>
     </div>
 </div>
