--- a/htmlclasses/projects.html
+++ b/htmlclasses/projects.html
@@ -20,29 +20,63 @@
     </div>
     <div class="mytitle">
         <div>
-            <span>Projects</span>
+            <span>Ronald Marx</span>
         </div>
         <div>
-            <span> </span>
+            <span>Projects</span>
         </div>
     </div>
     <div class="myprojectscontainer">
         <div class="myprojectdescription">
-            <span>Throughout the course of my Web Development, I have worked on several projects related to website
-            design. More filler content here.</span>
+            <h2 class="projecttitle">My Work</h2>
+            <p>
+                Throughout the course of my Web Development, I have worked on several projects related to website
+                design. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sem aliquet mi ornare maximus
+                ut et mi. Pellentesque imperdiet sapien sapien, vitae fermentum arcu scelerisque in. Proin bibendum
+                luctus commodo. Quisque dui mi, pharetra vel lorem at, tristique pharetra ligula. Ut a dapibus dolor.
+                Fusce eget enim tristique, congue mauris nec, feugiat lorem. Nulla cursus diam a urna semper dignissim.
+                Sed scelerisque iaculis augue, id pellentesque orci varius et. Curabitur vel sem tortor. Aliquam
+                blandit sit amet odio in sollicitudin. Fusce fringilla molestie urna. Pellentesque mauris nunc,
+                placerat eu libero nec, fermentum venenatis quam.
+
+            </p>
         </div>
         <div class="myprojectlist">
-            <div class="projectbox">
-                <span>Alignment</span>
+            <div class="projectbox coffee">
+                <div class="colorbox">
+                    <div class="textincolorbox">
+                    </div>
+                </div>
+                <div class="textprojectbox">
+                    <span>Coffee</span>
+                </div>
             </div>
-            <div class="projectbox">
-                <span>Alignment</span>
+            <div class="projectbox burger">
+                <div class="colorbox">
+                    <div class="textincolorbox">
+                                            </div>
+                </div>
+                <div class="textprojectbox">
+                    <span>Burgers</span>
+                </div>
             </div>
-            <div class="projectbox">
-                <span>Alignment</span>
+            <div class="projectbox computer">
+                <div class="colorbox">
+                    <div class="textincolorbox">
+                    </div>
+                </div>
+                <div class="textprojectbox">
+                    <span>Computer</span>
+                </div>
             </div>
-            <div class="projectbox">
-                <span>alignment</span>
+            <div class="projectbox beach">
+                <div class="colorbox">
+                    <div class="textincolorbox">
+                    </div>
+                </div>
+                <div class="textprojectbox">
+                    <span>Beach</span>
+                </div>
             </div>
         </div>
     </div>
