--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -2,35 +2,88 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Current Projects</title>
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="main.css">
 </head>
-<div class="nav">
-    <ul>
-        <li>
-            <a href="home.html">About</a>
-        </li>
-        <li>
-            <a href="projects.html">Projects</a>
-        </li>
-        <li>
-            <a href="resume.html">Resume</a>
-        </li>
-        <li>
-            <a href="contact.html">Contact</a>
-        </li>
-    </ul>
-</div>
-</div>
+<body id="projectspage">
+<div class="container">
 
-<div>
-    <p>
-        I need to put borders and sharpen up the nav bar. Possibly can do it using % on borders, if I do a 1% border on
-        each, then I should be able to run the bars at 23%, for 92% width on total bars and 8% for borders. If this
-        doesn't work, I should be able to double check for overlap BETWEEN boxes, so that it would be 5% per, then I
-        potentially need a workaround, possibly a small box on the left with slightly larger borders.
-    </p>
-    <p>Also, ask why I get stupid top margins if I don't set padding on EVERYTHING to zero.</p>
+    <div class="navsection">
+        <a href="index.html" class="homelink navlink">Home</a>
+        <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
+        <a href="projects.html" class="projectlink navlink">Projects</a>
+        <a href="resume.html" class="resumelink navlink">Resume</a>
+        <a href="contact.html" class="contactlink navlink">Contact Me</a>
+
+    </div>
+    <div class="mytitle">
+        <div class="titlecontent">
+            <span>Ronald Marx</span>
+        </div>
+        <div class="titlecontent">
+            <span>Projects</span>
+        </div>
+    </div>
+    <div class="myprojectscontainer">
+        <div class="myprojectdescription">
+            <h2 class="projecttitle">My Work</h2>
+            <p class="baseswitch">
+                Throughout the course of my Web Development, I have worked on several projects related to website
+                design. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sem aliquet mi ornare maximus
+                ut et mi. Pellentesque imperdiet sapien sapien, vitae fermentum arcu scelerisque in. Proin bibendum
+                luctus commodo. Quisque dui mi, pharetra vel lorem at, tristique pharetra ligula. Ut a dapibus dolor.
+                Fusce eget enim tristique, congue mauris nec, feugiat lorem. Nulla cursus diam a urna semper dignissim.
+                Sed scelerisque iaculis augue, id pellentesque orci varius et. Curabitur vel sem tortor. Aliquam
+                blandit sit amet odio in sollicitudin. Fusce fringilla molestie urna. Pellentesque mauris nunc,
+                placerat eu libero nec, fermentum venenatis quam.
+            </p>
+            <p class="burgerswitch">
+                Text about burgers here.
+            </p>
+        </div>
+        <div class="myprojectlist">
+            <div class="projectbox coffee">
+                <div class="colorbox">
+                    <div class="textincolorbox">
+                    </div>
+                </div>
+                <div class="textprojectbox">
+                    <span>Coffee</span>
+                </div>
+            </div>
+            <div class="projectbox burger">
+                <div class="colorbox">
+                    <div class="textincolorbox">
+                                            </div>
+                </div>
+                <div class="textprojectbox">
+                    <span>Burgers</span>
+                </div>
+            </div>
+            <div class="projectbox computer">
+                <div class="colorbox">
+                    <div class="textincolorbox">
+                    </div>
+                </div>
+                <div class="textprojectbox">
+                    <span>Computer</span>
+                </div>
+            </div>
+            <div class="projectbox beach">
+                <div class="colorbox">
+                    <div class="textincolorbox">
+                    </div>
+                </div>
+                <div class="textprojectbox">
+                    <span>Beach</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+
+    </div>
 </div>
 </body>
 </html>
