--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -2,27 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My Resume</title>
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="main.css">
+
 </head>
-<body>
+<body id="resumepage">
+<div class="container">
 
-<div class="nav">
-    <ul>
-        <li>
-            <a href="home.html">About</a>
-        </li>
-        <li>
-            <a href="projects.html">Projects</a>
-        </li>
-        <li>
-            <a href="resume.html">Resume</a>
-        </li>
-        <li>
-            <a href="contact.html">Contact</a>
-        </li>
-    </ul>
+    <div class="navsection">
+        <a href="index.html" class="homelink navlink">Home</a>
+        <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
+        <a href="projects.html" class="projectlink navlink">Projects</a>
+        <a href="resume.html" class="resumelink navlink">Resume</a>
+        <a href="contact.html" class="contactlink navlink">Contact Me</a>
+
+    </div>
+    <div class="mytitle">
+        <div>
+            <span>Resume</span>
+        </div>
+        <div>
+            <span> </span>
+        </div>
+    </div>
+
 </div>
-
 </body>
 </html>
