Started the changeover

--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -5,6 +5,7 @@
     <title>Current Projects</title>
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body id="projectspage">
 <div class="container">
@@ -18,29 +19,29 @@
 
     </div>
     <div class="mytitle">
-        <div class="titlecontent">
+        <div class="title">
             <span>Ronald Marx</span>
         </div>
-        <div class="titlecontent">
+        <div class="titlecontainer">
             <span>Projects</span>
         </div>
     </div>
     <div class="myprojectscontainer">
         <div class="myprojectdescription">
             <h2 class="projecttitle">My Work</h2>
-            <p class="baseswitch">
-                Throughout the course of my Web Development, I have worked on several projects related to website
+            <div id="content1">
+                <span>Throughout the course of my Web Development, I have worked on several projects related to website
                 design. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sem aliquet mi ornare maximus
                 ut et mi. Pellentesque imperdiet sapien sapien, vitae fermentum arcu scelerisque in. Proin bibendum
                 luctus commodo. Quisque dui mi, pharetra vel lorem at, tristique pharetra ligula. Ut a dapibus dolor.
                 Fusce eget enim tristique, congue mauris nec, feugiat lorem. Nulla cursus diam a urna semper dignissim.
                 Sed scelerisque iaculis augue, id pellentesque orci varius et. Curabitur vel sem tortor. Aliquam
                 blandit sit amet odio in sollicitudin. Fusce fringilla molestie urna. Pellentesque mauris nunc,
-                placerat eu libero nec, fermentum venenatis quam.
-            </p>
-            <p class="burgerswitch">
-                Text about burgers here.
-            </p>
+                placerat eu libero nec, fermentum venenatis quam. </span>
+            </div>
+            <div id="content2">
+                <span>Text about burgers here.</span>
+            </div>
         </div>
         <div class="myprojectlist">
             <div class="projectbox coffee">
