Got mouseover and media queries set up

--- a/htmlclasses/cssday4.html
+++ b/htmlclasses/cssday4.html
@@ -57,10 +57,10 @@
 
 <script>
     var previous = 1;
-    function changecontent(theid){
+    function changecontent(index){
         $("#content" + previous).hide();
-        $("#content" + theid).show();
-        previous = theid;
+        $("#content" + index).show();
+        previous = index;
     }
 </script>
 </body>
