Got mouseover and media queries set up

--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -19,11 +19,19 @@
 
     </div>
     <div class="mytitle">
-        <div>
+        <div class="title">
+            <span>Ronald Marx</span>
+        </div>
+        <div class="titlecontainer">
             <span>Resume</span>
         </div>
-        <div>
-            <span> </span>
+    </div>
+    <div class="resumeflexbox">
+        <div class="resumebox">
+
+        </div>
+        <div class="aboutmelink">
+
         </div>
     </div>
 
