--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -28,6 +28,7 @@
     </div>
     <div class="resumeflexbox">
         <div class="resumebox">
+            <div class="r-header"></div>
 
         </div>
         <div class="aboutmelink">
