Pushed up index landing page, among other CSS changes. Testing for live

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,11 +8,10 @@
 </head>
 <body id="homepage">
 
-    <!-- <img style="width: 600px;" src="images/bear.png" /> -->
     <div class="container">
 
         <div class="navsection">
-            <a href="index.html" class="homelink navlink">Home</a>
+            <!-- <a href="index.html" class="homelink navlink">Home</a> -->
             <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
             <a href="projects.html" class="projectlink navlink">Projects</a>
             <a href="resume.html" class="resumelink navlink">Resume</a>
@@ -20,14 +19,47 @@
 
         </div>
         <div class="mytitle">
-            <div>
+            <div class="title">
                 <span>Ronald Marx</span>
             </div>
-            <div>
-                <span> </span>
+            <div class="titlecontainer">
+                <span></span>
             </div>
         </div>
-
+        <div class="indexcontainer">
+            <div class="projectbox aboutnavbox">
+                <div class="indexbox">
+                    <a class="indexanchor" href="aboutme.html"></a>
+                </div>
+                <div class="textprojectbox">
+                    <span>About Me</span>
+                </div>
+            </div>
+            <div class="projectbox projectnavbox">
+                <div class="indexbox">
+                    <a class="indexanchor" href="projects.html"></a>
+                </div>
+                <div class="textprojectbox">
+                    <span>My Projects</span>
+                </div>
+            </div>
+            <div class="projectbox resumenavbox">
+                <div class="indexbox">
+                    <a class="indexanchor" href="resume.html"></a>
+                </div>
+                <div class="textprojectbox">
+                    <span>My Resume</span>
+                </div>
+            </div>
+            <div class="projectbox contactmenavbox" >
+                <div class="indexbox">
+                    <a class="indexanchor" href="contact.html"></a>
+                </div>
+                <div class="textprojectbox">
+                    <span>Contact Me</span>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
