--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -11,7 +11,7 @@
 <div class="container">
 
     <div class="navsection">
-        <a href="index.html" class="homelink navlink">Home</a>
+        <!-- <a href="index.html" class="homelink navlink">Home</a> -->
         <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
         <a href="projects.html" class="projectlink navlink">Projects</a>
         <a href="resume.html" class="resumelink navlink">Resume</a>
@@ -29,9 +29,11 @@
     <div class="resumeflexbox">
         <div class="resumebox">
             <div class="r-header"></div>
+            <div class="r-qualif"></div>
+            <div class="r-body"></div>
 
         </div>
-        <div class="aboutmelink">
+        <div class="resumedownload">
 
         </div>
     </div>
