--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -11,7 +11,7 @@
 <div class="container">
 
     <div class="navsection">
-        <a href="index.html" class="homelink navlink">Home</a>
+        <!-- <a href="index.html" class="homelink navlink">Home</a> -->
         <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
         <a href="projects.html" class="projectlink navlink">Projects</a>
         <a href="resume.html" class="resumelink navlink">Resume</a>
