Got rid of duplicates

--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -40,16 +40,28 @@
                 placerat eu libero nec, fermentum venenatis quam. </span>
             </div>
             <div id="content2" style="display:none">
-                <span>Text about coffee here. beans brews bears mugs black</span>
+                <span>Spicy jalapeno bacon ipsum dolor amet andouille laboris in ham. Adipisicing duis lorem cupidatat quis. Cupim aute bresaola adipisicing beef ribs cow. Beef jowl boudin ribeye, labore reprehenderit turkey officia ut pastrami ball tip bacon cupim. Dolore nisi qui dolor t-bone ground round. Drumstick frankfurter bresaola, t-bone ullamco nostrud ea shoulder aute elit jerky cupim biltong picanha pork loin. In proident consequat consectetur quis ea filet mignon tenderloin fatback swine ipsum aliqua pork chop nisi.
+
+Quis dolore veniam, pastrami anim ribeye et. Fatback occaecat sunt, pancetta cow non flank. Ham hock beef ribs consequat, reprehenderit tempor in jowl aute. Proident pig rump ea pancetta t-bone id kevin sint burgdoggen.
+
+Cillum elit irure salami velit boudin eiusmod excepteur. Meatloaf non duis shankle. Porchetta pancetta occaecat laboris, cupidatat meatloaf dolore shank turkey short ribs exercitation aliquip. Sed bresaola capicola, beef ut shank short loin occaecat short ribs voluptate pork eu pariatur tenderloin venison.</span>
             </div>
             <div id="content3" style="display:none">
-                <span>Text about burgers meat meat meat </span>
+                <span>Bacon ipsum dolor amet swine frankfurter bresaola, sirloin shoulder porchetta picanha hamburger short loin cow kielbasa. Drumstick pork burgdoggen hamburger, salami venison flank ribeye shank. Corned beef ground round pork drumstick strip steak turkey ball tip cupim. Tri-tip pig short ribs frankfurter t-bone.
+
+Ham tongue alcatra strip steak. Pork loin filet mignon shankle corned beef chicken capicola pork chuck fatback venison tenderloin hamburger flank t-bone. Landjaeger kielbasa pork loin strip steak meatball. Salami capicola strip steak pork chop doner tri-tip frankfurter leberkas. Porchetta salami alcatra, ham venison pork loin pork belly turducken tenderloin flank. Venison turkey beef flank, filet mignon ham beef ribs kevin drumstick pastrami prosciutto cupim ribeye hamburger. Turducken flank tail porchetta pork chop prosciutto tri-tip burgdoggen, capicola ribeye leberkas bacon.
+
+T-bone corned beef spare ribs, kielbasa turkey pork flank. Ground round meatball jerky filet mignon alcatra pastrami swine fatback short loin t-bone. Beef ribs burgdoggen pork chop andouille alcatra chuck. Strip steak burgdoggen bacon doner, pork loin cow tri-tip fatback short loin drumstick. Biltong pancetta pork chop capicola salami ground round tenderloin t-bone. Venison doner frankfurter fatback swine kielbasa biltong corned beef tri-tip tail. </span>
             </div>
             <div id="content4" style="display:none">
-                <span>Computers devel asldkfjoaicnawle; rlaskdfgj;nl;b;ald</span>
+                <span>Bacon ipsum dolor amet cupim biltong drumstick, leberkas pork belly pork chop tongue t-bone ribeye kielbasa salami. Shank ground round pig pork loin jowl. Beef ham hock ball tip short loin jerky tongue pork pork chop chicken porchetta. T-bone salami short ribs, brisket pancetta chuck ribeye andouille shoulder picanha boudin swine.
+
+Ribeye drumstick shankle ham picanha kevin. Capicola cupim meatloaf burgdoggen ham corned beef pork belly kevin meatball ground round tri-tip. Shoulder beef ribs andouille, bacon biltong flank venison beef pig pork loin turkey kielbasa capicola pork chop. Drumstick spare ribs short ribs pork belly salami meatball corned beef pancetta alcatra burgdoggen. Beef ribs salami corned beef, pastrami cupim chicken ball tip kielbasa short ribs jerky turducken jowl.</span>
             </div>
             <div id="content5" style="display:none">
-                <span>BOX BOX BOX BO BOB OBOCOBOC </span>
+                <span>Spicy jalapeno bacon ipsum dolor amet tri-tip voluptate aliqua do filet mignon aliquip. Ham landjaeger consequat pork loin. Aliqua turducken strip steak anim pork chop. Proident flank short ribs ribeye eu consequat elit ham capicola. Pork belly tempor pancetta biltong deserunt venison meatball irure pariatur. Chuck officia pork belly shoulder nulla cupim in pork jowl t-bone bresaola.
+
+In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incididunt officia dolor frankfurter ground round. Turkey pancetta rump shank filet mignon swine nostrud ut tri-tip in jowl bresaola. Consequat qui shoulder lorem, ea rump mollit andouille spare ribs elit ad aliqua. </span>
             </div>
         </div>
         <div class="myprojectlist">
