Fixed project page. Have weird lines around my stuff though.

--- a/bt-portfolio/projects.html
+++ b/bt-portfolio/projects.html
@@ -44,7 +44,7 @@
                 <span>My Work</span>
             </div>
         </div>
-        <div class="row">
+        <div class="row testfill">
             <div class="col-xs-4 descriptioncontent">
                 <div id="content1">
                 <span>Throughout the course of my Web Development, I have worked on several projects related to website
@@ -83,28 +83,9 @@ In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incidi
             </div>
             <div class="col-xs-8 projectcontainer">
                 <div class="row">
-                    <div class="col-md-6 projectbox coffee" id="hoverbox2" onmouseover="changecontent(2)" onmouseout="changecontent(1)">
-                            <div class="colorbox">
-                                <div class="textincolorbox">
-                                </div>
-                            </div>
-                            <div class="textprojectbox">
-                                <span>Coffee</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="hoverbox3" class="col-md-6 projectbox burger" onmouseover="changecontent(3)" onmouseout="changecontent(1)">
-                        <div class="colorbox">
-                            <div class="textincolorbox">
-                            </div>
-                        </div>
-                        <div class="textprojectbox">
-                            <span>Burgers</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div id="hoverbox4" class="col-md-6 projectbox computer" onmouseover="changecontent(4)" onmouseout="changecontent(1)">
+
+
+                    <div class="col-md-6 burger projectbox" id="hoverbox2" onmouseover="changecontent(2)" onmouseout="changecontent(1)">
                         <div class="colorbox">
                             <div class="textincolorbox">
                             </div>
@@ -113,13 +94,34 @@ In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incidi
                             <span>Computer</span>
                         </div>
                     </div>
-                    <div id="hoverbox5" class="col-md-6 projectbox beach" onmouseover="changecontent(5)" onmouseout="changecontent(1)">
+                    <div class="col-md-6 beach projectbox" id="hoverbox3" onmouseover="changecontent(3)" onmouseout="changecontent(1)">
                         <div class="colorbox">
                             <div class="textincolorbox">
                             </div>
                         </div>
                         <div class="textprojectbox">
-                            <span>Beach</span>
+                            <span>Computer</span>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 projectbox computer" id="hoverbox4" onmouseover="changecontent(4)" onmouseout="changecontent(1)">
+                        <div class="colorbox">
+                            <div class="textincolorbox">
+                            </div>
+                        </div>
+                        <div class="textprojectbox">
+                            <span>Computer</span>
+                        </div>
+                    </div>
+                    <div class="col-md-6 coffee projectbox" id="hoverbox5" onmouseover="changecontent(5)" onmouseout="changecontent(1)">
+                        <div class="colorbox">
+                            <div class="textincolorbox">
+                            </div>
+                        </div>
+                        <div class="textprojectbox">
+                            <span>Computer</span>
                         </div>
                     </div>
                 </div>
