--- a/bt-portfolio/resume.html
+++ b/bt-portfolio/resume.html
@@ -2,41 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Resume</title>
-    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="main.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Wild & Wacky Vegetables</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body id="resumepage">
+<div class="container nav-container">
+    <nav class="navbar navbar-inverse nav-radius">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">Ronald Marx</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="aboutme.html">About<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="projects.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
+
+
+            </ul>
+        </div><!-- /.navbar-collapse -->
+        <!-- /.container-fluid -->
+    </nav>
+</div>
 <div class="container">
-
-    <div class="navsection">
-        <!-- <a href="index.html" class="homelink navlink">Home</a> -->
-        <a href="aboutme.html" class="aboutmelink navlink">About Me</a>
-        <a href="projects.html" class="projectlink navlink">Projects</a>
-        <a href="resume.html" class="resumelink navlink">Resume</a>
-        <a href="contact.html" class="contactlink navlink">Contact Me</a>
-
-    </div>
-    <div class="mytitle">
-        <div class="title">
-            <span>Ronald Marx</span>
-        </div>
-        <div class="titlecontainer">
-            <span>Resume</span>
+    <div class="row mytitle">
+        <div class="col-xs-6 titlecontent">
+            <span>My Work</span>
         </div>
     </div>
-    <div class="resumeflexbox">
-        <div class="resumebox">
-            <div class="r-header"></div>
-            <div class="r-qualif"></div>
-            <div class="r-body"></div>
-
-        </div>
-        <div class="resumedownload">
-
-        </div>
-    </div>
+</div>
 
 </div>
 </body>
