--- a/bootstrapclasses/btstrpday3.html
+++ b/bootstrapclasses/btstrpday3.html
@@ -61,19 +61,61 @@
             <div class="row">
                 <div class="col-xs-3">
                     <a href="#" class="thumbnail" aria-hidden="true">
-                        <img src="components.svg" alt="...">
+                        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Beets-Bundle.jpg/800px-Beets-Bundle.jpg" alt="Beets">
                     </a>
                 </div>
                 <div class="col-xs-3">
                     <a href="#" class="thumbnail">
-                        <img src="components.svg" alt="...">
+                        <img src="http://upload.wikimedia.org/wikipedia/commons/9/9e/CarrotDiversityLg.jpg" alt="Carrots" >
                     </a>
                 </div>
                 <div class="col-xs-3">
                     <a href="#" class="thumbnail">
-                        <img src="components.svg" alt="...">
+                        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Green_Asparagus_New_York_11_May_2006.jpg/220px-Green_Asparagus_New_York_11_May_2006.jpg" alt="Asparagus" >
                     </a>
                 </div>
+            </div>
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active ">
+                        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Beets-Bundle.jpg/800px-Beets-Bundle.jpg" alt="Beets">
+                        <div class="carousel-caption darktext">
+                            Beets
+                        </div>
+                    </div>
+                    <div class="item ">
+                        <img src="http://upload.wikimedia.org/wikipedia/commons/9/9e/CarrotDiversityLg.jpg" alt="Carrots" >
+                        <div class="carousel-caption darktext">
+                            Carrots
+                        </div>
+                    </div>
+                    <div class="item ">
+                        <img src="asparagus.jpg" alt="Asparagus" >
+                        <div class="carousel-caption darktext">
+                            Asparagus
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
             <h2>Really informative info</h2>
             <p>Kale courgette salsify mustard broccoli seakale wakame potato fava bean tigernut leek celery spinach avocado cabbage celtuce rutabaga kohlrabi. Parsnip pea soko groundnut bitterleaf spring onion. Grape dulse rutabaga lentil gram kakadu plum water spinach cabbage lotus root.
